src/main/java/org/example/principles/compositionOverInheritance/bad/Car.java
package org.example.principles.compositionOverInheritance.bad;


/**
 * Represents the vehicle dimension (Car).
 */
public abstract class Car extends Transport {
}
